# coop-deployer

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml  docker.yml
bruno/: bruno.json  create campaign.bru  deploy maps.bru  deploy patches.bru  list campaigns.bru  update campaign.bru
bruno/environments/: local.bru
crates/coop-app/: Cargo.toml
crates/coop-app/src/: lib.rs
crates/coop-app/src/http/: middleware.rs  mod.rs
crates/coop-app/src/http/handlers/: campaigns.rs  maps.rs  mod.rs  patches.rs
crates/coop-app/src/infra/: auth.rs  auth_fake.rs  db.rs  db_fake.rs  fs.rs  fs_fake.rs  git.rs  git_fake.rs  github.rs  github_fake.rs  mod.rs  test_support.rs
crates/coop-app/src/ports/: auth.rs  db.rs  fs.rs  git.rs  github.rs  mod.rs
crates/coop-app/src/services/: auth.rs  campaign.rs  map.rs  mod.rs  patch.rs
crates/coop-domain/: Cargo.toml
crates/coop-domain/src/: errors.rs  models.rs
docs/: ARCHITECTURE.md  PLAN.md
src/: main.rs
