[package]
name = "coop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
coop-domain = { path = "../coop-domain" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["auth"] }
http = "1"
